Make sure result canvases wrap

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -109,6 +109,7 @@ a.navbar-brand strong {
 pre {
    border: none;
    background-color: #fff;
+   white-space: pre-wrap;
 }
 
 .CodeMirror, .resultDiv {
